--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </section>
     <footer>
-        <p>Designed by <a href="dotcode.site">DotCode.site</a> |
+        <p>Designed by <a href="https://dotcode.site">DotCode.site</a> |
             <a href="https://github.com/bakarfreelancer/email-js">Source Code</a>
         </p>
     </footer>
